[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/Levels/Objects/Components/Blaster/Blast/blast.gd" type="Script" id=1]
[ext_resource path="res://World/Levels/Objects/Components/Blaster/Blast/blast.obj" type="ArrayMesh" id=2]
[ext_resource path="res://World/Levels/Objects/Components/Blaster/Blast/blast.material" type="Material" id=3]
[ext_resource path="res://World/Levels/Objects/Components/Blaster/Blast/explode.wav" type="AudioStream" id=4]
[ext_resource path="res://World/Levels/Objects/Components/Blaster/Blast/release.wav" type="AudioStream" id=5]

[sub_resource type="SphereShape" id=1]
radius = 0.1

[node name="Blast" type="Spatial"]
visible = false
script = ExtResource( 1 )

[node name="blast" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Hit_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Fire_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 3.0
pitch_scale = 0.5

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
